--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,22 +2,35 @@
   <div class="row justify-content-center">
     <h4 class="mt-4 display-4">Listing Posts</h4>
   </div>
-  <%= link_to 'Create Post', new_post_path %>
+    <div style="display: flex;
+    justify-content: flex-end; ">
+        <input type="text">
+        <%= link_to 'Search',  class: "btn btn-success" %>
+        <%= link_to 'Add', new_post_path , class: "btn btn-success" %>
+        <%= link_to 'Upload', class: "btn btn-success" %>
+        <%= link_to 'Download', class: "btn btn-success" %>
+    </div>
   <% if @posts.present? %>
     <div class="row justify-content-center">
       <table class="table table-bordered">
         <thead>
           <tr>
-            <th scope="col">Title</th>
-            <th scope="col">Description</th>
+            <th scope="col">Post Title</th>
+            <th scope="col">Post Description</th>
+            <th scope="col">Post User</th>
+            <th scope="col">Post Date</th>
             <th scope="col" colspan="3">Action</th>
           </tr>
         </thead>
         <tbody>
           <% @posts.each do |post| %>
-            <tr>
-              <td><%= post.title %></td>
+            <tr> 
+             
+              <td><%=link_to post.title, post %></td>
               <td><%= post.description %></td>
+              <td> user</td>
+              <td> <%= post.created_at.strftime("%d/%m/%Y") %></td>
+             
               <td><%= link_to 'Show', post_path(post.id) %></td> 
               <td><%= link_to 'Edit', edit_post_path(post.id) %></td> 
               <td><%= link_to "Delete", post_path(post.id),
